tests/bad_programs/type_errors/int_ass_string_div_bool.nc
int main() {
    string s = "fffffffff";
    int n = s / 5;
    return 0;
}
